# screenpipe

./: .cursorignore  .cursorrules  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  2024-12-07.md  2024-12-08.md  :q  ARCHIVE_DESIGN.md  BOUNTY-1982-SOLUTION.md  CLAUDE.md  CLOUD_SYNC_IMPLEMENTATION_PLAN.md  CLOUD_SYNC_NEXT_STEPS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  FINAL_TEST_REPORT.md  Implementation plan for UI pipe issues in war  LICENSE.md  OCR_FILTERING_IMPLEMENTATION_COMPLETE.md  OCR_FILTERING_TEST_IMPLEMENTATION.md  PR_CREATION_INSTRUCTIONS.md  PR_SUMMARY.md  README-ja.md  README-ja_JP.md  README-zh_CN.md  README.md  README_zh.md  TESTING.md  TESTING_PLAN.md  TEST_REPORT.md  activity-log-8-20-24, 12-13 PM.json  build.rs  build.sh  bun.lockb  check_deepgram_key.py  comments.json  (+25 more)
crates/screenpipe-apple-intelligence/: Cargo.toml  README.md  build.rs
crates/screenpipe-integrations/: Cargo.toml
crates/screenpipe-server/: Cargo.toml  README.md  build.rs
crates/screenpipe-vision/: Cargo.toml
screenpipe/: Cargo.toml
screenpipe-accessibility/: Cargo.toml
screenpipe-accessibility/src/: events.rs  lib.rs
screenpipe-actions/: Cargo.toml  accessibility_attributes.txt
screenpipe-actions/ai-proxy/: bun.lockb  index.ts  package-lock.json  package.json  tsconfig.json  wrangler.toml
screenpipe-actions/src/: call_ai.rs  call_openai.rs  lib.rs  main.rs  monitor_keystroke_commands.rs  print_all_attributes.swift  run.rs  screenshot.rs  type_and_animate.rs
screenpipe-app-tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.beta.conf.json  tauri.conf.json  tauri.conf.prod.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.prod.conf.json  tauri.windows.conf.json  ui_monitor-aarch64-apple-darwin  ui_monitor-x86_64-apple-darwin
screenpipe-audio/: Cargo.toml  README.md  build.rs
screenpipe-audio/benches/: audio_benchmark.rs  pcm_decode_benchmark.rs  record_and_transcribe_benchmark.rs  stt_benchmark.rs
screenpipe-audio/examples/: continuous_stt.rs  pyannote.rs  stt.rs  stt_v2.rs
screenpipe-audio/src/: audio.rs  audio_processing.rs  constants.rs  core.rs  encode.rs  lib.rs  meeting_detector.rs  multilingual.rs  pcm_decode.rs  realtime.rs  segments.rs  stt.rs  stt_v2.rs  vad_engine.rs  whisper.rs
screenpipe-audio/tests/: accuracy_test.rs  accuracy_test_integration.rs  accuracy_test_v2.rs  audio_processing_test.rs  channel_lag_test.rs  core_tests.rs  llm_processing_test.rs  meeting_detector_test.rs  onnx_model_test.rs  overlap_dedup_test.rs  realtime_test.rs  speaker_identification.rs  stt_test.rs  whisper_test.rs  windows_output_device_tests.rs
screenpipe-core/: Cargo 2.toml  Cargo.toml  build.rs
screenpipe-core/examples/: cron.rs  google.rs  llama-cpp.rs  llama.rs  mistral.rs  phi.rs  win_automation.rs  windows_pdf_to_legacy.rs
screenpipe-core/scripts/: install-git-cli-windows.ps1
screenpipe-core/src/: actions.rs  api.rs  candle_utils.rs  devices.rs  events.rs  ffmpeg.rs  google.rs  keyboard_capture.rs  language.rs  lib.rs  llama.rs  llama_cpp.rs  llm-llama.rs  llm.rs  mistral.rs  network.rs  phi.rs  pii_removal.rs  pipes.rs  window_tracking.rs
screenpipe-core/tests/: llm_test.rs  pipes_test.rs  window_tracking_tests.rs
screenpipe-db/: Cargo.toml
screenpipe-db/benches/: db_benchmarks.rs  new_db_benchmark.rs  search_accuracy.rs
screenpipe-db/src/: db.rs  lib.rs  session_manager.rs  session_tracker.rs  text_normalizer.rs  text_similarity.rs  types.rs  video_db.rs
screenpipe-db/tests/: audio_duplicate_test.rs  db.rs  frame_offset_sync_test.rs  session_manager_test.rs  timeline_performance_test.rs
screenpipe-events/: .gitignore  Cargo.toml
screenpipe-events/benches/: events.rs
screenpipe-events/src/: events_manager.rs  lib.rs
screenpipe-events/tests/: cross_crate_events_test.rs  events_manager_test.rs
screenpipe-integrations/: Cargo.toml
screenpipe-integrations/screenpipe-mcp/: .gitignore  README.md  hello.py  manifest.json  package-lock.json  package.json  pyproject.toml  vitest.config.ts
screenpipe-integrations/screenpipe-universal/: Cargo.toml  Cross.toml  README.md
screenpipe-integrations/src/: friend_wearable.rs  lib.rs  unstructured_ocr.rs
screenpipe-integrations/whatsapp-scraper/: README.md  TEST_REPORT.md  __init__.py  debug_elements.py  test_scraper.py  whatsapp_scraper.py
screenpipe-rdp/capture_agent/: Cargo.toml
screenpipe-rdp/session_service/: Cargo.toml
screenpipe-server/: Cargo.toml  build.rs
screenpipe-server/benches/: db_benchmarks.rs  new_db_benchmark.rs
screenpipe-server/src/: add.rs  analytics.rs  auto_destruct.rs  bluetooth.rs  cache.rs  chunking.rs  cleanup.rs  cli.rs  cloud_search.rs  core.rs  db.rs  db_types.rs  display.rs  event_system.rs  filtering.rs  highlight.rs  icons.rs  index.rs  lib.rs  logs.rs  migration_worker.rs  otel_config.rs  pipe_manager.rs  pipe_runner.rs  plugin.rs  resource_monitor.rs  rewind_migration.rs  server.rs  sleep_monitor.rs  sync_api.rs  sync_provider.rs  text_embeds.rs  ui_recorder.rs  video.rs  video_cache.rs  video_utils.rs  vision_manager.rs
screenpipe-server/tests/: audio_vision_integration_test.rs  chunking_test.rs  content_hiding_test.rs  db.rs  deep_search_test.rs  endpoint_test.rs  first_frames_test.rs  frame_extraction_test.rs  icons_test.rs  index_test.rs  search_test.rs  start_stop.rs  stream_frames_test.rs  tags_test.rs  timeline_refresh_bug_test.rs  video_cache_test.rs  video_utils_test.rs
screenpipe-vision/: Cargo.toml  build.rs
screenpipe-vision/benches/: apple_leak_bench.rs  ocr_benchmark.rs  vision_benchmark.rs
screenpipe-vision/examples/: rdp.rs  screenpipe-vision.rs  websocket.rs  window-filtering.rs  window-properties.rs
screenpipe-vision/lib/: libscreenpipe.dylib  libscreenpipe_arm64.dylib  libscreenpipe_x86_64.dylib
screenpipe-vision/src/: activity.rs  apple.rs  capture_screenshot_by_window.rs  core.rs  custom_ocr.rs  embed.rs  frame_comparison.rs  lib.rs  microsoft.rs  monitor.rs  multimodal_embeddings.rs  ocr.swift  ocr_cache.rs  remote_desktop.rs  run_ui_monitoring_macos.rs  utils.rs  (+6 more)
(+3878 files in other folders)
