[workspace]
members = [
    "screenpipe-core",
    "screenpipe-vision",
    "screenpipe-audio",
    "screenpipe-server", 
    "screenpipe-integrations",
    "screenpipe-actions",
]
exclude = [
    "screenpipe-app-tauri/src-tauri",
]
resolver = "2"


[workspace.package]
version = "0.1.98"
authors = ["louis030195 <hi@louis030195.com>"]
description = ""
repository = "https://github.com/mediar-ai/screenpipe"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
# AI
candle = { package = "candle-core", version = "0.7.2" }
candle-nn = { package = "candle-nn", version = "0.7.2" }
candle-transformers = { package = "candle-transformers", version = "0.7.2" }
tokenizers = "0.20.0"
hf-hub = "0.3.0"

log = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = { version = "0.2.3" }
tokio = { version = "1.15", features = ["full", "tracing"] }
crossbeam = "0.8.4"
image = "0.25"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
vcpkg = "0.2"
cc = "1.0"

[patch.crates-io]
# enables chinese mirror (hf is banned in china)
hf-hub = { git = "https://github.com/king-jingxiang/hf-hub" }

[workspace.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2023.04.15"
dynamic = true

