[package]
name = "screenpipe-accessibility"
version = "0.1.0"
edition = "2021"
description = "Accessibility and UI event capture for screenpipe - keyboard, mouse, clipboard"
license = "MIT"

[features]
default = []
db = ["screenpipe-db"]

[dependencies]
screenpipe-db = { path = "../screenpipe-db", optional = true }
# Core
anyhow = "1.0"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Async
tokio = { version = "1", features = ["sync", "time", "rt"] }

# Regex for privacy patterns
regex = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.13", features = ["ax", "cg", "blocks", "ns", "app"] }

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
