[package]
name = "screenpipe-actions"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
name = "screenpipe_actions"
path = "src/lib.rs"

[[bin]]
name = "screenpipe-actions"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["full"] }
rdev = "0.5.3"
enigo = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }