[package]
name = "screenpipe-audio"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform audio capture
# cpal = "0.15.2"
# Temporary hack check https://github.com/RustAudio/cpal/pull/894
cpal = { git = "https://github.com/Kree0/cpal.git", rev = "dfca186" }

# Wav encoding
hound = "3.5"

# Cli ! shouldn't be required if using as lib
clap = { version = "4.3", features = ["derive"] }

# Dates
chrono = { version = "0.4.31", features = ["serde"] }

# Local Embeddings + STT
# TODO: feature metal, cuda, etc. see https://github.com/huggingface/candle/blob/main/candle-core/Cargo.toml
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
lazy_static = "1.4.0"
base64 = "0.21.7"
anyhow = "1.0.86"
byteorder = "1.5.0"
hf-hub = "0.3.2"
symphonia = { version = "0.5.4", features = ["mp3"] }
rand = "0.8.5"
rubato = "0.15.0"

# Log 
log = { workspace = true }
env_logger = "0.10"

# File 
tempfile = "3"

# Tracing
tracing = { workspace = true }

# Bytes
bytemuck = "1.16.1"

# Async
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.3.0"
infer = "0.15"
criterion = { workspace = true }

[features]
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]


[[bin]]
name = "screenpipe-audio"
path = "src/bin/screenpipe-audio.rs"

[[bench]]
name = "audio_benchmark"
harness = false

[[bench]]
name = "pcm_decode_benchmark"
harness = false

[[bench]]
name = "stt_benchmark"
harness = false

