[package]
name = "screenpipe-core"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0.1"
ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", branch = "main" }
log = "0.4.17"
anyhow = "1.0.86"
candle = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, features = ["tokio"], optional = true }
screenpipe-actions = { path = "../screenpipe-actions", optional = true }

# pipes
reqwest = { workspace = true }
tokio = { workspace = true }

# Security
regex = { version = "1.10.6", features = ["std"], optional = true }
lazy_static = { version = "1.4.0", optional = true }
tempfile = "3.3.0"
url = "2.4.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dirs = "5.0.0"
clap = { version = "4.5.20", features = ["derive"] }

# random
rand = "0.8.5"

once_cell = "1.19.0"

[features]
default = ["pipes", "security"]
llm = ["candle", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
pipes = []
security = ["dep:regex", "dep:lazy_static"]
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = ["candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
beta = ["dep:screenpipe-actions"]

