[package]
name = "screenpipe-core"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0.1"
ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", branch = "main" }
log = "0.4.17"
anyhow = "1.0.86"
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true, features = [
    "tokio",
    "native-tls",
] }
http-cache-reqwest = "0.15.0"
reqwest-middleware = "0.4.0"
tokio = { workspace = true }

# Security
regex = { version = "1.10.6", features = ["std"], optional = true }
lazy_static = { version = "1.4.0", optional = true }
tempfile = "3.3.0"
url = "2.4.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dirs = "5.0.0"
clap = { version = "4.5.20", features = ["derive"] }

# random
rand = "0.8.5"

once_cell = "1.19.0"

cron = "0.13.0"
chrono = "0.4.38"
sentry = { workspace = true }
zip = "0.6.2"

[dev-dependencies]
reqwest = { workspace = true }

[features]
default = ["security"]
security = ["dep:regex", "dep:lazy_static"]
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = ["candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
llm = []

[target.'cfg(target_os = "macos")'.dependencies]
# accessibility-sys = "0.1.3"
accessibility-sys = { git = "https://github.com/eiz/accessibility.git", branch = "master" }
# accessibility = "0.1.6"
accessibility = { git = "https://github.com/eiz/accessibility.git", branch = "master" }
objc = "0.2.7"
objc-foundation = "0.1.1"

thiserror = "2.0.12"
core-foundation = "=0.10.0"
core-graphics = "=0.24.0"
