[package]
name = "screenpipe-integrations"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
curl = "0.4.46"
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"
log = "0.4"