[package]
name = "screenpipe-integrations"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
image = { workspace = true }
reqwest = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1.68"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tempfile = "3.2"
anyhow = "1.0"
chrono-tz = "0.8"
mime_guess = "2.0.5"
screenpipe-core = { path = "../screenpipe-core" }
