[package]
name = "screenpipe-server"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

screenpipe-vision = { path = "../screenpipe-vision" }
screenpipe-audio = { path = "../screenpipe-audio" }
screenpipe-core = { path = "../screenpipe-core", features = ["security"] }

# Image processing
image = { workspace = true }

# Dates
chrono = { version = "0.4.31", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate"] }

# Local Embeddings + STT
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }

anyhow = "1.0.86"
hf-hub = "0.3.2"
rand = "0.8.5"

# Server
axum = "0.7.5"
tokio = { version = "1.15", features = ["full", "tracing"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Log
log = { workspace = true }
env_logger = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Cli ! shouldn't be required if using as lib
clap = { version = "4.3", features = ["derive"] }

# Memory watchdog
sysinfo = "0.29.0"

# Color 
colored = "2.0"

# Plugins
tower = { version = "0.5", features = ["util"] }
futures = "0.3.17"

# Directory management
dirs = "5.0"

# Client http 
reqwest = { workspace = true }

# Concurrency
crossbeam = { workspace = true }

# Friend integration
screenpipe-integrations = { path = "../screenpipe-integrations" }
async-trait = "0.1.68"

# filtering
ndarray = "0.15.6"
rust-stemmers = "1.2.0"

# base64
base64 = "0.22.1"

uuid = "1.5.0"

tempfile = { version = "3.3.0", optional = true }
url = { version = "2.2.0", optional = true }

# Telemetry
highlightio = { version = "1.0.2", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.3.0"

# Benches
criterion = { workspace = true }
rand = "0.8"

axum-test = "15.3.0"

[[bench]]
name = "db_benchmarks"
harness = false

[[bench]]
name = "new_db_benchmark"
harness = false

[features]
default = ["pipes"]
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
pipes = [
    "screenpipe-core/pipes",
    "tempfile",
    "url",
]


[[bin]]
name = "screenpipe"
path = "src/bin/screenpipe-server.rs"


[package.metadata.cargo-machete]
ignored = ["tempfile", "url"]