[package]
name = "screenpipe-server"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

screenpipe-vision = { path = "../screenpipe-vision" }
screenpipe-audio = { path = "../screenpipe-audio" }
screenpipe-core = { path = "../screenpipe-core", features = ["security"] }
screenpipe-actions = { path = "../screenpipe-actions", optional = true }

# Image processing
image = { workspace = true }

# Dates
chrono = { version = "0.4.31", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
    "migrate",
] }

# Local Embeddings + STT
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }

anyhow = "1.0.86"
hf-hub = "0.3.2"
rand = "0.8.5"

thiserror = "1"

#opentelemetry
opentelemetry = "0.21"
opentelemetry-appender-tracing = "0.2"
opentelemetry-otlp = { version = "0.14", features = [
    "http-proto",
    "reqwest-rustls",
    "tokio",
    "reqwest-client",
] }
opentelemetry_sdk = { version = "0.21", default-features = false, features = [
    "rt-tokio",
] }
opentelemetry-semantic-conventions = "0.13"

# Server
axum = "0.7.5"
async-stream = "0.3"
tokio = { version = "1.15", features = ["full", "tracing"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Log
log = { workspace = true }
env_logger = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
# Cli ! shouldn't be required if using as lib
clap = { version = "4.3", features = ["derive", "env"] }

# Memory watchdog
sysinfo = "0.29.0"

# Color 
colored = "2.0"

# Plugins
tower = { version = "0.5", features = ["util"] }
futures = "0.3.17"

# Directory management
dirs = "5.0"

# Client http 
reqwest = { workspace = true }

# Concurrency
crossbeam = { workspace = true }

# Friend integration
screenpipe-integrations = { path = "../screenpipe-integrations" }
async-trait = "0.1.68"

# filtering
ndarray = "0.15.6"
rust-stemmers = "1.2.0"

# base64
base64 = "0.22.1"

uuid = "1.5.0"

tempfile = "3.3.0"


url = { version = "2.2.0", optional = true }


enigo = { version = "0.2.1", optional = true }

# Scope guard for cancelation of streams
scopeguard = "1.2.0"

# Bincode for serializing hot cache
bincode = "1.3.3"

# SHA256 for hashing
sha2 = "0.10.6"

# Fast random number generator
fastrand = "2.1.1"
sqlite-vec = "0.1.3"
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
zerocopy = { version = "0.7.32" }

[dev-dependencies]
tempfile = "3.3.0"

# Benches
criterion = { workspace = true }
rand = "0.8"

axum-test = "15.3.0"

[[bench]]
name = "db_benchmarks"
harness = false

[[bench]]
name = "new_db_benchmark"
harness = false

[features]
default = []
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = ["candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
pipes = ["screenpipe-core/pipes", "url"]
llm = ["screenpipe-core/llm"]
beta = ["screenpipe-core/beta", "dep:screenpipe-actions"]
experimental = ["enigo"]

[[bin]]
name = "screenpipe"
path = "src/bin/screenpipe-server.rs"


[package.metadata.cargo-machete]
ignored = ["url", "opentelemetry-appender-tracing"]
