[package]
name = "screenpipe-vision"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

# async
tokio = { workspace = true }

# Image processing
image = { workspace = true }

# OCR
rusty-tesseract = { git = "https://github.com/louis030195/rusty-tesseract.git", branch = "main" }

anyhow = "1.0.86"

image-compare = "0.4.1"
clap = { version = "4.0", features = ["derive"] }

# Integrations
screenpipe-integrations = { path = "../screenpipe-integrations" }
screenpipe-events = { path = "../screenpipe-events" }

# Lanuage specification
screenpipe-core = { path = "../screenpipe-core" }
screenpipe-db = { path = "../screenpipe-db" }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }
which = "6.0"
serde = "1.0.200"

xcap = "0.3.3" # non broken version

once_cell = { workspace = true }
base64 = "0.22.1"

reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3.3.0"
criterion = { workspace = true }
strsim = "0.10.0"
memory-stats = "1.2.0"

# websocket example
futures-util = "0.3"
tokio-tungstenite = "0.20"
serde = "1.0.200"

[package.metadata.osx]
framework = ["Vision", "AppKit"]

[[bench]]
name = "vision_benchmark"
harness = false

[[bench]]
name = "ocr_benchmark"
harness = false

[[bench]]
name = "apple_leak_bench"
harness = false

[[example]]
name = "screenpipe-vision-websocket"
path = "examples/websocket.rs"

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = { version = "0.16.1" }
windows = { version = "0.58", features = [
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "=0.2.164"
cidre = { git = "https://github.com/yury/cidre.git" } # idk why cant pin version / rev 
accessibility-sys = "0.1.3"
core-foundation = "=0.10.0"
url = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "=0.2.164"
